# Effer

./: .swp  Cargo.toml  README.md  install.sh  notes_for_testing.txt  pom  shell.nix  test_config.toml  testfile
src/: arguments.rs  colors.rs  encryption.rs  file.rs  globals.rs  input.rs  macros.rs  main.rs  menu.rs  modes.rs  notes.rs  other.rs  settings.rs  structs.rs
tast/bop/: ooaisdjfo
