[package]
name = "effer"
version = "0.1.0"
authors = ["madprops <manuelchaves@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0.2"
block-modes = "0.3.3"
aes-soft = "0.3.3"
rand = "0.7.0"
hex = "0.3.2"
sha3 = "0.8.2"
rpassword = "3.0.2"
lazy_static = "1.3.0"
strum = "0.15.0"
strum_macros = "0.15.0"
rustyline = "5.0.1"