# T1

[package]
name = "effer"
version = "0.1.0"
authors = ["madprops <idk@ehhh.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0.2"
block-modes = "0.3.3"
aes-soft = "0.3.3"
rand = "0.7.0"
hex = "0.3.2"
sha3 = "0.8.2"
lazy_static = "1.3.0"
strum_macros = "0.15.0"
rustyline = "5.0.1"
termion = "1.5.3"
unicode-width = "0.1.5"
regex = "1.2.1"
clap = "2.33.0"
shellexpand = "1.0.0"
toml = "0.5.3"
serde = { version = "1.0.99", features = ["derive"] }
colorsys = "0.5.3"
textwrap = "0.11.0"
colorskill = "1.1.3"